fix: adjust iframe background in dark mode
in dark mode the text of ttl / markdown documents appeared white on white in some browsers rendering it effectively invisible. This makes sure the background is also adjusted. It seems not to change anything for browsers that do not style the iframe colors anyway. So it is either light on dark or dark on light in any browser.

--- a/elements/src/components/pos-document/pos-document.css
+++ b/elements/src/components/pos-document/pos-document.css
@@ -1,5 +1,5 @@
 iframe {
-  background-color: white;
+  background-color: var(--pos-background-color);
   width: 100%;
   height: 100vh;
 }
